--- a/项目笔记.md
+++ b/项目笔记.md
@@ -14,6 +14,26 @@ Resful api
 
 后端：nodejs/express/mongoose/crypto-js/multer
 
+
+
+云服务器部署
+
+数据库：
+
+mongod --dbpath=/home/ubuntu/www/shop/db --port=27022
+
+前端：
+
+服务端：
+
+mkdir shop
+
+git clone https://github.com/shangxue314/shop_server.git
+
+npm install
+
+
+
 #### 商城一期主要功能点
 
 ##### App.vue
@@ -107,7 +127,7 @@ Resful api
 > * **编辑地址 (addressedit.vue)**
 >
 >   * 添加
->     	`'post' api/address`
+>    		 	`'post' api/address`
 >
 >   * 编辑
 >
