--- a/项目笔记.md
+++ b/项目笔记.md
@@ -1,39 +1,3 @@
-crypto-js  加密解密
-multer   处理上传图片
-app.use(express.static('public')) // 静态资源托管，可直接访问public目录下文件
-
-mongod --dbpath=E:\工作\node项目\shop\db --port=27022
-
-pm2 start app.js
-pm2 logs app
-npm run serve
-
-前端：vue/vue-cli/vue-router/vuex/vant/axios/crypte-js/postcss-pxtorem
-
-Resful api
-
-后端：nodejs/express/mongoose/crypto-js/multer
-
-
-
-云服务器部署
-
-数据库：
-
-mongod --dbpath=/home/ubuntu/www/shop/db --port=27022
-
-前端：
-
-服务端：
-
-mkdir shop
-
-git clone https://github.com/shangxue314/shop_server.git
-
-npm install
-
-
-
 #### 商城一期主要功能点
 
 ##### App.vue
@@ -51,6 +15,22 @@ npm install
 
 > *焦点图*
 >
+> *签到*
+>
+> ​	`'post' api/signin`
+>
+> *领券*
+>
+> ​	`'post' api/coupon`
+>
+> *热卖*
+>
+> ​	路由跳转/search
+>
+> *礼物*
+>
+> ​	`'post' api/gift`
+>
 > *商品列表*
 >
 > ​	`'get' api/goods`
@@ -60,11 +40,19 @@ npm install
 > *商品信息*
 > 	`'get' api/goods/:id`
 >
+> *自动添加到我的足迹*
+>
+> ​	`'post' api/footprint`
+>
 > *添加购物车*
 > 	`'post' api/cart`
 >
 > *添加收藏*
 > 	`'post' api/fav`
+>
+> *购买*
+>
+> ​	`'post' api/order`
 
 ##### 分类 (sort.vue)
 
@@ -77,6 +65,10 @@ npm install
 > *商品筛选*
 >
 > ​	`'get' api/sort`
+>
+> ​	价格排序
+>
+> ​	销量、评论排序
 
 ##### 购物车 (cart.vue)
 
@@ -90,6 +82,10 @@ npm install
 >
 > *商品删除*
 > 	`'delete' api/cart`
+>
+> *购买*
+>
+> ​	`'post' api/order`
 
 ##### 添加商品 (add.vue)
 
@@ -100,8 +96,22 @@ npm install
 > *用户信息展示*
 > 	`getUserInfoMixin`
 >
-> *我的收藏 (fav.vue)*
+> *我的收藏  (fav.vue)*
 > 	`'get' api/fav`
+>
+> *我的优惠券 (coupon.vue)*
+> 	`'get' api/coupon`
+>
+> *我的积分 (score.vue)*
+> 	`'get' api/score`
+>
+> *我的订单  (order.vue)*
+>
+> ​	`'get' api/order`
+>
+> *我的足迹  (footprint.vue)*
+>
+> ​	`'get' api/footprint`
 
 ##### 个人信息设置 (config.vue)
 
@@ -127,7 +137,7 @@ npm install
 > * **编辑地址 (addressedit.vue)**
 >
 >   * 添加
->    		 	`'post' api/address`
+>     	`'post' api/address`
 >
 >   * 编辑
 >
@@ -148,3 +158,248 @@ npm install
 ##### 注册 (sign.vue)
 
 > ` 'post' api/sign`
+
+
+
+#### 注意点记录
+
+##### 前端
+
+* vue/vue-cli/vue-router/vuex/vant/axios/crypte-js/postcss-pxtorem/moment
+
+* crypto-js  加密解密
+* Resful api
+
+##### 后端
+
+* nodejs/express/mongoose/crypto-js/multer
+
+* multer   处理上传图片
+* app.use(express.static('public')) // 静态资源托管，可直接访问public目录下文件
+
+##### nginx配置
+
+vim /etc/nginx/sites-enabled/shopconf
+
+```javascript
+server {
+        listen 8080;
+        server_name 82.157.103.3;
+        add_header Access-Control-Allow-Origin *;
+        location / {
+                root /var/www/html/shop;
+                gzip on;
+                gzip_static on;
+          			gzip_min_length 1k;
+                gzip_http_version 1.1;
+                gzip_comp_level 4;
+                gzip_types application/json application/javascript text/css;
+          			gzip_vary on;
+                index index.html index.htm;
+                add_header 'Access-Control-Allow-Origin' '*';
+                try_files $uri $uri/ @router;
+        }
+        location @router {
+                rewrite ^.*$ /index.html last;
+        }
+        location /api {
+                rewrite ^/api/(.*)$ /$1 break;
+                include uwsgi_params;
+                proxy_set_header        Host                    $host;
+                proxy_set_header        x-frowarder-for         $remote_addr;
+                proxy_set_header        X-Real-IP               $remote_addr;
+                proxy_pass http://82.157.103.3:54321;
+        }
+}
+```
+
+##### CMD
+
+```javascript
+// root权限
+sudo su -
+
+// 退出root
+exit
+
+// 启动数据库
+开发：mongod --dbpath=/usr/local/MongoData --port=27022 --bind_ip=0.0.0.0 --fork --logpath=/usr/local/MongoLog/mongo.log
+
+生产：mongod --dbpath=/home/ubuntu/www/shop/db --port=27022 --bind_ip=0.0.0.0 --fork --logpath=/home/ubuntu/www/shop/logs/logs.log
+
+// 启动NodeApp
+pm2 start app.js --watch
+
+// 放开文件夹权限
+chmod -R 777 /var/www/html/shop
+
+// 本地上传文件和文件夹
+scp -p /Users/shangxue01/Desktop/shop/dist/index.html ubuntu@82.157.103.3:/var/www/html/shop
+scp -p -r /Users/shangxue01/Desktop/shop/dist/css ubuntu@82.157.103.3:/var/www/html/shop
+scp -p -r /Users/shangxue01/Desktop/shop/dist/js ubuntu@82.157.103.3:/var/www/html/shop
+scp -p /Users/shangxue01/Desktop/shop_server/app.js ubuntu@82.157.103.3:/home/ubuntu/www/shop/server
+```
+
+##### 优化
+
+* 路由懒加载
+
+* 关闭预加载
+
+  ```javascript
+  chainWebpack: config=>{
+    // 删除index中资源预加载
+    config.plugins.delete('prefetch')
+    config.plugins.delete('preload')
+  }
+  ```
+
+* 资源gzip （compression-webpack-plugin）
+
+  ```javascript
+  // vue.config.js配置gzip压缩资源文件
+  const CompressionWebpackPlugin = require('compression-webpack-plugin')
+  configureWebpack: config=>{
+    let plugins = []
+    // gzip压缩资源文件
+    plugins.push(
+      new CompressionWebpackPlugin({
+        algorithm: 'gzip',
+        test: /\.js$|\.json$|\.css/,
+        threshold: 10240,   // 大小大于该值的资源会被处理
+        minRatio: 0.8,      // 压缩率小雨该值的资源被处理
+        deleteOriginalAssets: false     // true删除源文件
+      })
+    )
+    return {plugins}
+  }
+  // nginx中配置gzip开启
+  gzip on;
+  gzip_static on;
+  gzip_http_version 1.1;
+  gzip_comp_level 9;
+  gzip_types text/plain application/json application/javascript application/css text/css application/xml application/xml+rss text/javascript application/x-httpd-php image/jpeg image/jpeg image/gif image/png image/x-ms-bmp;
+  ```
+
+* 只打包变化的文件
+
+  ```javascript
+  const {HashedModuleIdsPlugin} = require('webpack')
+  plugins.push(
+  	new HashedModuleIdsPlugin()
+  )
+  ```
+
+* 使用cdn加速优化
+
+  ```javascript
+  const isProduction = process.env.NODE_ENV === 'production'
+  const externals = {
+    vue: 'Vue',
+    'vue-router': 'VueRouter',
+    vuex: 'Vuex',
+    vant: 'vant',
+    axios: 'axios'
+  }
+  // cdn链接，回插入到index.html中
+  const cdn = {
+    // 开发环境
+    dev: {
+      css: [],
+      js: []
+    },
+    // 生产环境
+    build: {
+      css: ['https://cdn.jsdelivr.net/npm/vant@2.12.18/lib/index.css'],
+      js: [
+        'https://cdn.jsdelivr.net/npm/vue@2.6.11/dist/vue.min.js',
+        'https://cdn.jsdelivr.net/npm/vue-router@3.5.1/dist/vue-router.min.js',
+        'https://cdn.jsdelivr.net/npm/vuex@3.6.2/dist/vuex.min.js',
+        'https://cdn.jsdelivr.net/npm/vant@2.12.18/lib/vant.min.js',
+        'https://cdn.jsdelivr.net/npm/axios@0.21.1/dist/axios.min.js',
+        'https://cdn.jsdelivr.net/npm/moment@2.29.1/dist/moment.min.js'
+      ]
+    }
+  }
+  configureWebpack: config=>{
+  	// 为生产环境修改配置
+    if(isProduction){
+      config.externals = externals
+    }
+  },
+  chainWebpack: config=>{
+    // 添加cdn参数到htmlWebpackPlugin配置中
+    config.plugin('html').tap(args=>{
+      if(isProduction){
+        args[0].cdn = cdn.build
+      }else{
+        args[0].cdn = cdn.dev
+      }
+      return args
+    })
+  }
+  ```
+
+  ```html
+  <!--public/index.html中添加-->
+  <!--使用CDN的css文件-->
+  <% for (var i in htmlWebpackPlugin.options.cdn&&htmlWebpackPlugin.options.cdn.css){ %>
+    <link href="<%= htmlWebpackPlugin.options.cdn.css[i] %>" rel="preload" as="style" />
+    <link href="<%= htmlWebpackPlugin.options.cdn.css[i] %>" rel="stylesheet" />
+  <% } %>
+  <!--使用CDN的js文件-->
+  <% for (var i in htmlWebpackPlugin.options.cdn&&htmlWebpackPlugin.options.cdn.js){ %>
+    <script src="<%= htmlWebpackPlugin.options.cdn.js[i] %>"></script>
+  <% } %>
+  ```
+
+
+* 图片压缩（image-webpack-loader）
+
+  ```javascript
+  // 安装 npm i image-webpack-loader -D
+  chainWebpack: config=>{
+    // 图片压缩
+    config.module.rule('images').use('image-webpack-loader').loader('image-webpack-loader').options({bypassOnDebug: true}).end()
+  }
+  ```
+
+* 公共代码抽离
+
+  ```javascript
+  configureWebpack: config=>{
+    config.optimization = {
+      splitChunks: {
+        cacheGroups: {
+          vendor: {
+            chunks: 'all',
+            test: /node_modules/,
+            name: 'vendor',
+            minChunks: 1,
+            maxInitialRequests: 5,
+            minSize: 0,
+            priority: 100
+          },
+          common: {
+            chunks: 'all',
+            test: /[\\/]src[\\/]js[\\/]/,
+            name: 'common',
+            minChunks: 2,
+            maxInitialRequests: 5,
+            minSize: 0,
+            priority: 60
+          },
+          styles: {
+            name: 'styles',
+            test: /\.(sa|sc|c)ss$/,
+            chunks: 'all',
+            enforce: true
+          },
+          runtimeChunk: {
+            name: 'manifest'
+          }
+        }
+      }
+    }
+  }
+  ```
